// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gallery Component renders an image element for each element in the data array 1`] = `
<div>
  <div
    class="sc-bZQynM dNANyc"
  >
    <div
      class="sc-bxivhb hPtXaV"
    >
      <div
        class="sc-ifAKCX BwnNO"
      >
        <img
          class="sc-EHOje jjfgVa"
          src="https://enda.ie/filename-01.gif"
        />
      </div>
    </div>
    <div
      class="sc-bxivhb hPtXaV"
    >
      <div
        class="sc-ifAKCX BwnNO"
      >
        <img
          class="sc-EHOje jjfgVa"
          src="https://enda.ie/filename-02.gif"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Gallery Component renders no image elements when data is empty 1`] = `
<div>
  <div
    class="sc-bZQynM dNANyc"
  />
</div>
`;
